# moman

./: .env  .gitignore  pyproject.toml
src/moman-bin/: constants.py  errors.py  main.py  utils.py
src/moman-bin/cli/: __init__.py
src/moman-bin/config/: base.py  root.py
src/moman-bin/handler/: __init__.py  base.py  build.py  modular.py
src/moman-bin/handler/add/: handler.py
src/moman-bin/handler/create/: handler.py
src/moman-bin/handler/new/: handler.py  template.py
src/moman-bin/info/: modular.py
src/moman-bin/info/config/: module.py
src/moman/interface/: __init__.py
src/moman/manager/: __init__.py
src/moman_bin/: constants.py  errors.py  template.py  utils.py
src/moman_bin/cli/: __init__.py
src/moman_bin/handler/: base.py  import_utils.py  modular.py  template.py
src/moman_bin/handler/add/: handler.py
src/moman_bin/handler/create/: handler.py
src/moman_bin/handler/implement/: __init__.py
src/moman_bin/handler/interface/: __init__.py
src/moman_bin/handler/new/: handler.py  template.py
src/moman_bin/info/: modular.py
src/moman_bin/info/config/: base.py  module.py  root.py
